doctor smile done !

--- a/doctorsmile/blog.html
+++ b/doctorsmile/blog.html
@@ -348,56 +348,65 @@
                 </ul>
             </div>
         </section>
-        <section class="text text_fullscreen">
+        <section class="blog">
             <div class="uk-container">
-                <span class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</span>
-                <p class="uk-text uk-text-medium uk-text-bold">Оплатить услуги стоматологии "Дентко" можно наличными денежными средствами и банковскими платежными карточками на ресепшене после приема врача, а также оформить рассрочку на оказанные услуги.</p>
-                <p class="uk-text uk-text-medium">Мечта о белоснежной улыбке сейчас осуществима для каждого. Ведь современная стоматология готова предложить вам услуги восстановления зубного ряда даже при полной адентии. Опытный врач всегда подберет подходящее решение. Вот только рассчитывать на дешевизну не приходится. Ведь цены определяются отнюдь не амбициями клиники, а рядом факторов, влияющих на качество лечения и уровень оказания услуг:</p>
-                <div class="uk-column-1-2@s uk-width-child-1-2">
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">Материалы.</span> В отличие от государственных клиник, «Дентко» использует импортные композиты и керамику, цена которых неизбежно привязана к евро;</p>
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">В стоимость включается и амортизация оборудования.</span> Комфортные кресла, бормашины, не перегревающие эмаль и гарантирующие сохранность ваших зубов и защиту их от инфекции, также частично учитываются в стоимости лечения;</p>
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">Работа специалистов.</span> В клинике Дентко работают врачи 1 и высшей квалификационной категории, а в нашей лаборатории – опытные зубные техники. Цена их труда также отличается от зарплаты студента-практиканта.</p>
-                </div>
-                <p class="uk-text uk-text-medium">В нашей стоматологической клинике используется современное оборудование, которое позволяет врачу тщательно контролировать ход и результат лечения. Это ваш гарант того, что зуб под коронкой не заболит, а пломба не выпадет спустя месяц. Согласитесь, это дорогого стоит! Поэтому иногда лучше вылечить зуб в рассрочку, чем утратить его через полгода-год.</p>
-                <p class="uk-text uk-text-medium">Протезирование, реставрация, установка имплантов и виниров – услуги, которые оплатить сразу может не каждый клиент. Понимая это, мы предоставляем возможность оплаты в рассрочку и с помощью банковского кредита.</p>
-            </div>
-        </section>
-        <section class="about">
-            <div class="uk-container">
-                <div class="uk-section">
-                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
-                        <div class="about__side about__side_img-container">
-                            <div class="about__img-wrap">
-                                <img class="about__img" src="./img/about_payment.jpg" uk-img>
-                            </div>
+                <span class="uk-h1 uk-margin-medium-bottom">Наши статьи</span>
+                <div class="blog__grid">
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
                         </div>
-                        <div class="about__side">
-                            <span class="uk-h1">Стоматология в рассрочку – это выгодно</span>
-                            <p class="uk-text-normal">Конечно, любую сумму можно накопить. Но вылечить зубы в рассрочку – в разы выгоднее. И вот почему:</p>
-                            <ul class="uk-list">
-                                <li>На начальной стадии кариес лечится за 20 минут – достаточно удалить пораженные бактериями ткани и установить пломбу;</li>
-                                <li>При глубоком кариесе объем работ значительно увеличивается. Врачу предстоит провести эндодоническое лечение пульпита, запломбировать каналы и восстановить коронку зуба. И стоить это будет вдвое дороже;</li>
-                                <li>Продолжая терпеть боль, вы рискуете заполучить периодонтит и прибавить к сумме еще и лечение корней;</li>
-                                <li>А в самых запущенных случаях придется оплатить имплант, его установку и изготовление коронки для него.</li>
-                            </ul>
-                            <p class="uk-text-normal">Чем быстрее вы обращаетесь к врачу, тем меньше приходится платить. А с учетом того, что лечение зубов в рассрочку в Минске не подразумевает начисления процентной ставки – это очень выгодное решение. При этом сумму можно разделить на 6 равных частей и выплатить в течение полугода. Если размер ежемесячного платежа для вас слишком велик, можно воспользоваться программой банковского кредитования и распределить сумму на более длительный срок.</p>
-                            <button class="button button_green button_big hero__button popup-request-open">Записаться на прием</button>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
                         </div>
-                    </div>
+                    </a>
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
+                        </div>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
+                        </div>
+                    </a>
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
+                        </div>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
+                        </div>
+                    </a>
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
+                        </div>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
+                        </div>
+                    </a>
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
+                        </div>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
+                        </div>
+                    </a>
+                    <a href="#" class="uk-card uk-card-default uk-flex uk-flex-column blog__article">
+                        <div class="uk-card-media-top">
+                            <img class="more__img" src="./img/more1.png">
+                        </div>
+                        <div class="uk-card-body">
+                            <span class="uk-card-title">Пришеечный кариес: симптомы и лечение</span>
+                            <p class="uk-margin-small-top">Пришеечный кариес: что такое, симптомы, как лечить - рекомендации медицинского центра Дентко!</p>
+                        </div>
+                    </a>
                 </div>
-            </div>
-        </section>
-        <section class="text text_fullscreen">
-            <div class="uk-container">
-                <span class="uk-h1">Стоматология в рассрочку в Минске</span>
-                <p class="uk-text uk-text-medium">Один из принципов современной стоматологии – это комфорт. Касается он и предоставления финансовых услуг. Так, чтобы получить деньги на лечение, вам не придется самостоятельно обращаться в банк – достаточно записаться на консультацию стоматолога-терапевта в «Дентко»:</p>
-                <div class="uk-column-1-2@s uk-width-child-1-2">
-                    <p class="uk-text text__item">Врач осмотрит полость рта, подберет методы лечения и протезирования, распишет для вас их стоимость;</p>
-                    <p class="uk-text text__item">После положительного ответа будет оформлен договор на кредит или рассрочку, а также на оказание стоматологических услуг;</p>
-                    <p class="uk-text text__item">Сразу после согласования цены на весь комплекс услуг, наша бухгалтерия выпишет счет-фактуру, сделает копии вашего паспорта и направит пакет документов в банк;</p>
-                    <p class="uk-text text__item">График лечения вы сможете согласовать с врачом, подобрав удобные для вас дни и часы. Мы работаем до 21.00 в будни и в выходные, поэтому вы сможете выбрать комфортные часы приема без пропуска работы и важных событий в жизни вашей семьи.</p>
-                </div>
-                <p class="uk-text uk-text-medium">А главное – это не просто стоматологи, а люди, которые вникают в ситуацию каждого пациента и всегда готовы подобрать персональные решения.</p>
             </div>
         </section>
         <section class="agit">
