--- a/doctorsmile/about.html
+++ b/doctorsmile/about.html
@@ -14,69 +14,52 @@
 <body>
     <header class="header">
         <div class="uk-container">
-            <div class="uk-flex uk-flex-between uk-flex-bottom header__wrap">
-                <a href="./index.html" class="header__main-link"><img src="./img/logo.svg" alt="Логотип" class="header__logo"></a>
-                <dl class="uk-description-list header__item">
-                    <dt>Контакты:</dt>
-                    <dd>г. Минск, пр-кт Независимости, 58</dd>
-                </dl>
-                <dl class="uk-description-list header__item">
-                    <dt>Время работы:</dt>
-                    <dd class="uk-inline">
-                        <div class="uk-inline header__dropdown-trigger">
-                            <span class="header__dropdown-span">Без выходных <img src="./img/info.svg"></span>
-                            <div class="uk-card uk-card-body uk-margin-remove-top header__dropdown-card">
-                                <span class="footer__card-header uk-text-bold">Время работы:</span>
-                                <div class="footer__card-body uk-flex uk-flex-between">
-                                    <div class="footer__card-col uk-flex uk-flex-column">
-                                        <span>пн-пт:</span>
-                                        <span>сб:</span>
-                                        <span>вс:</span>
-                                    </div>
-                                    <div class="footer__card-col uk-flex uk-flex-column">
-                                        <span>09:00 — 21:00</span>
-                                        <span>09:00 — 20:00</span>
-                                        <span>09:00 — 17:00</span>
-                                    </div>
+            <div class="uk-flex uk-flex-between uk-flex-top header__wrap">
+                <a href="./index.html" class="header__main-link"><img src="./img/logo_2.svg" alt="Логотип" class="header__logo"></a>
+                <div class="uk-flex uk-flex-between header__content">
+                    <dl class="uk-description-list header__item">
+                        <dt>Контакты:</dt>
+                        <dd>г. Минск, ул. Маяковского, 24</dd>
+                    </dl>
+                    <dl class="uk-description-list header__item">
+                        <dt>Время работы:</dt>
+                        <dd>пн-пт: 09:00 - 21:00</dd>
+                        <dd>сб-вс: 10:00 - 18:00</dd>
+                    </dl>
+                    <dl class="uk-description-list header__item">
+                        <dt>Телефоны:</dt>
+                        <dd>
+                            <div class="uk-inline">
+                                <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></span>
+                                <div class="header__dropdown-container" uk-dropdown>
+                                    <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
+                                    <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
+                                    <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
+                                    <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
                                 </div>
                             </div>
-                        </div>
-                    </dd>
-                </dl>
-                <dl class="uk-description-list header__item">
-                    <dt>Мы в соц.сетях:</dt>
-                    <dd class="uk-flex uk-flex-between">
-                        <a href="#" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
-                        <a href="#" class="header__link"><img src="./img/vk.png" alt="Иконка" class="header__link-img"></a>
-                        <a href="#" class="header__link"><img src="./img/instagram.png" alt="Иконка" class="header__link-img"></a>
-                    </dd>
-                </dl>
-                <dl class="uk-description-list header__item">
-                    <dt>Телефоны:</dt>
-                    <dd>
-                        <div class="uk-inline">
-                            <span class="header__dropdown"><a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a></span>
-                            <div class="header__dropdown-container" uk-dropdown>
-                                <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
-                                <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
-                                <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
-                                <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                            <div class="uk-flex">
+                                <a href="tg://msg?text=&to=+375291101212" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
+                                <a href="viber://chat?number=375291101212" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
+                                <a href="whatsapp://send?phone=375291101212" class="header__link"><img src="./img/whatsapp.png" alt="Иконка" class="header__link-img"></a>
                             </div>
-                        </div>
-                        <div class="uk-flex-inline uk-flex-between">
-                            <a href="#" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
-                            <a href="#" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
-                            <a href="#" class="header__link"><img src="./img/whatsapp.png" alt="Иконка" class="header__link-img"></a>
-                        </div>
-                    </dd>
-                </dl>
+                        </dd>
+                    </dl>
+                    <dl class="uk-description-list header__item">
+                        <dt>Мы в соц.сетях:</dt>
+                        <dd class="uk-flex">
+                            <a href="https://www.facebook.com/dentko.stom" class="header__link header__link_big"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
+                            <a href="#" class="header__link header__link_big"><img src="./img/instagram.png" alt="Иконка" class="header__link-img"></a>
+                        </dd>
+                    </dl>
+                </div>
                 <button class="header__menu-btn menu-open"><span></span></button>
             </div>
         </div>
     </header>
     <nav class="nav" uk-navbar>
-        <div class="uk-navbar-center">
-            <ul class="uk-navbar-nav uk-flex-between uk-flex-middle">
+        <div class="uk-container uk-flex uk-flex-middle uk-flex-between">
+            <ul class="uk-navbar-nav uk-flex-between uk-flex-center nav__list">
                 <li><a href="./about.html">о компании</a></li>
                 <li>
                     <a href="./service.html" class="nav__dropdown-link">услуги</a>
@@ -190,13 +173,13 @@
                     </div>
                 </li>
                 <li><a href="./price.html">цены</a></li>
-                <li><a href="./payment.html">оплата и рассрочка</a></li>
                 <li><a href="./reviews/reviews.html">отзывы</a></li>
                 <li><a href="./team.html">специалисты</a></li>
-                <li><a href="./faq/faq.html">вопрос-ответ</a></li>
+                <li><a href="./faq/faq.html">Блог</a></li>
                 <li><a href="./contacts.html">контакты</a></li>
-                <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
+                <li><a href="./covid.html" style="color: #EA0000;">covid-19</a></li>
             </ul>
+            <button class="nav__order popup-request-open">Записаться на прием</button>
         </div>
     </nav>
     <div class="appointment">
@@ -213,7 +196,7 @@
                         </div>
                     </div>
                     <div class="about__btn-wrap appointment__btn-wrap">
-                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                        <button class="button button_big button_green about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                     </div>
                 </div>
             </div>
@@ -360,43 +343,47 @@
         <section class="breadcrumbs">
             <div class="uk-container">
                 <ul class="breadcrumbs__list">
-                    <li class="breadcrumbs__item"><a href="./index.html" class="breadcrumbs__link">Главная</a></li>
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link reviews__control_disabled">О компании</a></li>
+                    <li class="breadcrumbs__item"><a href="./service.html" class="breadcrumbs__link">Услуги</a></li>
+                    <li class="breadcrumbs__item"><a class="breadcrumbs__link">О компании</a></li>
                 </ul>
             </div>
         </section>
-        <section class="about">
+        <section class="about no-overflow">
             <div class="uk-container">
                 <div class="uk-section">
-                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m about__reverse" uk-grid>
-                        <div class="about__side">
-                            <span class="uk-h1">О компании</span>
-                            <p class="uk-text-normal">Стоматологическая клиника «Дентко» — это мир высоких стоматологических технологий, комфорта и домашнего уюта.</p>
-                            <p class="uk-text-bold">Мы предлагаем своим пациентам полный комплекс стоматологических услуг:</p>
-                            <ul class="uk-list">
-                                <li>Рентгенологическое обследование для любого лечения, включая имплантацию, а также диагностику ЛОР-заболеваний.</li>
-                                <li>Профессиональная гигиена.</li>
-                                <li>Домашние и офисные системы отбеливания зубов OPALESCENCE.</li>
-                                <li>Художественная реставрация зубов и реконструкция зубных рядов; восстановление разрушенных зубов новейшими методиками (на углеволоконных и стекловолоконных штифтах).</li>
-                                <li>Эффективная пародонтологическая помощь.</li>
-                                <li>Оперативная челюстно-лицевая хирургия.</li>
-                                <li>Имплантация и протезирование на имплантатах.</li>
-                                <li>Все виды протезирования:
-                                    <ul class="uk-list">
-                                        <li>металлокерамика;</li>
-                                        <li>безметалловая керамика — виниры, керамические вкладки, коронки;</li>
-                                        <li>все виды съемного и несъемного протезирования, в т.ч. микрозамковое.</li>   
-                                        <li>Ортодонтия — исправление прикуса в любом возрасте.</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="about__btn-wrap">
-                                <button class="uk-button uk-button-default button about__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                    <div class="uk-grid-match uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid>
+                        <div class="about__side about__side_img-container uk-flex-top">
+                            <div class="about__img-wrap about__img-wrap_sticky">
+                                <img class="about__img" src="./img/about_photo.jpg" alt="" uk-img>
                             </div>
                         </div>
-                        <div class="about__side about__side_img-container">
-                            <div class="about__img-wrap about__img-wrap_another">
-                                <img class="about__img" src="./img/about_photo.jpg" uk-img>
+                        <div class="about__side">
+                            <div class="about__text">
+                                <span class="uk-h1">О компании</span>
+                                <p>Обеспечивает стоматологическую терапевтическую помощь взрослым и детям.</p>
+                                <p>Знает, умеет и выполняет все технологии и методики диагностики, профилактики и лечения стоматологических заболеваний. Владеет реставрационной техникой с различными пломбировочными композитными материалами. Успешно работает со сложными случаями эндодонтического лечения зубов. Занимается лечением заболеваний маргинального периодонта и слизистой оболочки полости рта.</p>
+                                <span class="about__title">Образование</span>
+                                <ul>
+                                    <li>
+                                        <span>10 лет работы.</span> Наш стаж говорит сам за себя. 10 лет мы успешно дарим нашим пациентам здоровье и красоту зубов. Нас выбирают не только за высокую квалификацию наших специалистов, но и многолетний опыт в стоматологии.
+                                    </li>
+                                    <li>
+                                        <span>Команда специалистов.</span> Для вас работают сертифицированные врачи узких направлений с первой квалификационной категорией.
+                                    </li>
+                                    <li>
+                                        <span>Полное обследование.</span> У нас вы можете получить консультацию и пройти полное обследование. Благодаря оборудованному стоматологическому кабинету, для вас доступны услуги рентгена и компьютерной томографии.
+                                    </li>
+                                    <li>
+                                        <span>Качественные материалы.</span> Мы выбираем материалы и инструменты лучшего качества от мировых производителей. Коронки, протезы и брекеты имеют высокий уровень приживления и долгий срок службы.
+                                    </li>
+                                    <li>
+                                        <span>Цены.</span> Наши цены – ваша зона комфорта. Мы предлагаем качественную стоматологию и доступное платное лечение в Минске.
+                                    </li>
+                                    <li>
+                                        <span>Отзывы.</span> Довольные пациенты – лучшее подтверждение качества нашей работы.
+                                    </li>
+                                </ul>
+                                <button class="button button_green button_big about__button">Подробнее</button>
                             </div>
                         </div>
                     </div>
@@ -421,9 +408,9 @@
         </section>
         <section class="agit">
             <div class="uk-container">
-                <div class="uk-flex uk-flex-between uk-flex-middle">
-                    <p class="uk-text-bold uk-text-large">Запишитесь на прием к врачу в «Дентко» и получите план лечения и протезирования ваших зубов!</p>
-                    <button class="uk-button uk-button-default button popup-request-open">Записаться на прием</button>
+                <div class="uk-flex uk-flex-between uk-flex-middle uk-flex-column">
+                    <p class="uk-text-bold uk-text-center uk-text-large">Запишитесь на прием к врачу и получите план лечения и протезирования ваших зубов!</p>
+                    <button class="button button_white button_big popup-request-open">Записаться на прием</button>
                 </div>
             </div>
         </section>
@@ -506,7 +493,11 @@
                     <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр <br>"Дентко".</span>
                 </div>
                 <div class="uk-flex uk-flex-middle uk-flex-column footer__bottom-col">
-                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="./img/rating.png"><a href="/dentko/reviews/reviews.html" class="footer__2reviews"> 4,9 балла (10 голосов)</a></span>
+                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - 
+                    <!-- .review__rating_3-5  задает количество звездочек с шагом 0.5 от 0 до 5. В данном случае рейтинг будет 3.5 -->
+                    <span class="review__rating review__rating_dib review__rating_3-5"> 
+                        <span class="review__stars"></span>
+                    </span> 4,9 балла (10 голосов)</a></span>
                     <a href="#" class="green-link uk-link">Продвижение сайта - hata.by</a>
                 </div>
                 <div class="footer__bottom-col">
@@ -534,7 +525,7 @@
                     <div class="uk-input form__div">
                         <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
                         <div class="popup__info">
-                            <img src="/dentko/img/popup-info.svg" alt="" class="popup__info-img">
+                            <img src="./img/popup-info.svg" alt="" class="popup__info-img">
                             <div class="popup__info-card">
                                 <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
                                 <p>Не является обязательным полем для заполнения</p>
@@ -547,7 +538,7 @@
                     <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
+                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                 </div>
             </form>
         </div>
