--- a/doctorsmile/index.html
+++ b/doctorsmile/index.html
@@ -16,7 +16,7 @@
 <body class="no-overflow">
     <header class="header">
         <div class="uk-container">
-            <div class="uk-flex uk-flex-between uk-flex-top header__wrap">
+            <div class="uk-flex uk-flex-between uk-flex-middle uk-flex-top@m header__wrap">
                 <a href="./index.html" class="header__main-link"><img src="./img/logo_2.svg" alt="Логотип" class="header__logo"></a>
                 <div class="uk-flex uk-flex-between header__content">
                     <dl class="uk-description-list header__item">
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="about__btn-wrap appointment__btn-wrap">
-                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                        <button class="button button_big button_green about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                     </div>
                 </div>
             </div>
@@ -383,7 +383,7 @@
         <section class="services">
             <div class="uk-container">
                 <span class="section-title section-title_mb uk-h2">Наши услуги</span>
-                <div class="services__grid uk-child-width-1-4@s" uk-grid>
+                <div class="services__grid uk-child-width-1-4@l uk-child-width-1-3@m uk-child-width-1-2@s" uk-grid>
                     <div>
                         <div class="uk-flex uk-flex-column uk-flex-middle services__item services-item">
                             <svg width="61" height="60" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -531,7 +531,7 @@
                     <span class="uk-h2 uk-text-center">Не знаете с чего начать?</span>
                     <p class="uk-text-meta uk-text-center">Запишитесь на прием к специалисту для первичной диагностики. <br>
                         Работаем пн-пт: 09:00 - 21:00, сб-вс: 10:00 - 18:00</p>
-                    <form class="uk-flex uk-flex-center uk-flex-middle">
+                    <form class="uk-flex uk-flex-center@m uk-flex-stretch uk-flex-middle">
                         <div class="uk-input form__div">
                             <input class="uk-input" type="text" name="name" placeholder="Ваше имя" required>
                             <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
@@ -593,7 +593,7 @@
                 <div class="uk-flex uk-flex-between uk-flex-middle advantages__title">
                     <span class="uk-h2 uk-text-center uk-block uk-margin-medium-bottom">Наши преимущества</span>
                 </div>
-                <div class="uk-flex uk-child-width-1-3 uk-flex-between" uk-grid>
+                <div class="uk-flex uk-flex-center uk-child-width-1-2@s uk-child-width-1-3@m uk-flex-between@m" uk-grid>
                     <div class="uk-flex uk-flex-column uk-flex-middle">
                         <img src="./img/advantage-1.svg" alt="Иконка" class="advantages__img">
                         <span class="advantages__title uk-text-bold uk-text-center">Дополнительные гарантии</span>
@@ -791,7 +791,7 @@
                     </a>
                 </div>
                 <div class="uk-flex uk-flex-center uk-flex-middle">
-                    <a href="#" class="button button_big button_green">Посмотреть все работы</a>
+                    <a href="./blog.html" class="button button_big button_green">Посмотреть все работы</a>
                 </div>
             </div>
         </section>
@@ -882,7 +882,11 @@
                     <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр <br>"Дентко".</span>
                 </div>
                 <div class="uk-flex uk-flex-middle uk-flex-column footer__bottom-col">
-                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="./img/rating.png"><a href="/dentko/reviews/reviews.html" class="footer__2reviews"> 4,9 балла (10 голосов)</a></span>
+                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - 
+                    <!-- .review__rating_3-5  задает количество звездочек с шагом 0.5 от 0 до 5. В данном случае рейтинг будет 3.5 -->
+                    <span class="review__rating review__rating_dib review__rating_3-5"> 
+                        <span class="review__stars"></span>
+                    </span> 4,9 балла (10 голосов)</a></span>
                     <a href="#" class="green-link uk-link">Продвижение сайта - hata.by</a>
                 </div>
                 <div class="footer__bottom-col">
