--- a/doctorsmile/service.html
+++ b/doctorsmile/service.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="about__btn-wrap appointment__btn-wrap">
-                        <button class="uk-button uk-button-default button about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                        <button class="button button_big button_green about__btn appointment__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                     </div>
                 </div>
             </div>
@@ -598,7 +598,11 @@
                     <span class="uk-text uk-text-meta">© 1997 - 2020. Медицинский центр <br>"Дентко".</span>
                 </div>
                 <div class="uk-flex uk-flex-middle uk-flex-column footer__bottom-col">
-                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - <img src="./img/rating.png"><a href="/dentko/reviews/reviews.html" class="footer__2reviews"> 4,9 балла (10 голосов)</a></span>
+                    <span class="uk-text uk-text-meta">Рейтинг Медицинского центра "Дентко" - 
+                    <!-- .review__rating_3-5  задает количество звездочек с шагом 0.5 от 0 до 5. В данном случае рейтинг будет 3.5 -->
+                    <span class="review__rating review__rating_dib review__rating_3-5"> 
+                        <span class="review__stars"></span>
+                    </span> 4,9 балла (10 голосов)</a></span>
                     <a href="#" class="green-link uk-link">Продвижение сайта - hata.by</a>
                 </div>
                 <div class="footer__bottom-col">
@@ -608,42 +612,6 @@
         </div>
     </footer>
 
-    <div class="popup__wrapper popup-request">
-        <div class="uk-position-relative popup popup_request">
-            <span class="uk-position-absolute popup__close popup-close"></span>
-            <form class="popup__body">
-                <span class="uk-h1">Записаться на прием</span>
-                <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
-                <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
-                    <div class="uk-input form__div">
-                        <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
-                        <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
-                    </div>
-                    <div class="uk-input form__div">
-                        <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон">
-                        <span class="form__err">Введите номер в международном формате</span>
-                    </div>
-                    <div class="uk-input form__div">
-                        <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
-                        <div class="popup__info">
-                            <img src="/dentko/img/popup-info.svg" alt="" class="popup__info-img">
-                            <div class="popup__info-card">
-                                <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
-                                <p>Не является обязательным полем для заполнения</p>
-                            </div>
-                        </div>
-                        <span class="form__err">Неверный формат E-mail адреса</span>
-                    </div>
-                </div>
-                <div class="popup__row">
-                    <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
-                </div>
-                <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
-                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="/dentko/img/inline-arrow-w.svg"></button>
-                </div>
-            </form>
-        </div>
-    </div>
     <div class="popup__wrapper popup-faq">
         <div class="uk-position-relative popup popup_request">
             <span class="uk-position-absolute popup__close popup-close"></span>
@@ -665,6 +633,42 @@
                 </div>
                 <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
                     <button type="submit" class="uk-button popup__submit">Задать вопрос<img src="./img/inline-arrow-w.svg"></button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="popup__wrapper popup-request">
+        <div class="uk-position-relative popup popup_request">
+            <span class="uk-position-absolute popup__close popup-close"></span>
+            <form class="popup__body">
+                <span class="uk-h1">Записаться на прием</span>
+                <p class="uk-text uk-text-small">Наш администратор свяжется с Вами для корректировки времени.</p>
+                <div class="uk-flex uk-flex-between uk-child-width-1-3 popup__row">
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="text" name="name" placeholder="Ваше имя">
+                        <span class="form__err">В формате А-Я,а-я и минимум 2 символа</span>
+                    </div>
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="tel" name="tel" placeholder="Ваш телефон">
+                        <span class="form__err">Введите номер в международном формате</span>
+                    </div>
+                    <div class="uk-input form__div">
+                        <input class="uk-input" type="email" name="mail" placeholder="Ваш e-mail">
+                        <div class="popup__info">
+                            <img src="./img/popup-info.svg" alt="" class="popup__info-img">
+                            <div class="popup__info-card">
+                                <p>Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
+                                <p>Не является обязательным полем для заполнения</p>
+                            </div>
+                        </div>
+                        <span class="form__err">Неверный формат E-mail адреса</span>
+                    </div>
+                </div>
+                <div class="popup__row">
+                    <textarea class="uk-input" rows="2" name="comment" placeholder="Что вас беспокоит?"></textarea>
+                </div>
+                <div class="uk-flex uk-flex-between uk-width-1-1 popup__row">
+                    <button type="submit" class="uk-button popup__submit">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
                 </div>
             </form>
         </div>
