--- a/doctorsmile/about.html
+++ b/doctorsmile/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentko - стоматологии</title>
     <link rel="stylesheet" href="css/uikit.min.css"/>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/media.css"/>
@@ -398,12 +399,19 @@
             </div>
         </section>
         <section class="gallery">
-            <div class="uk-container">
-                <div class="uk-flex uk-child-width-1-3@m uk-child-width-1-1@s gallery__photos">
-                    <img src="./img/gallery1.png" alt="Фото в галерее" class="uk-img">
-                    <img src="./img/gallery2.png" alt="Фото в галерее" class="uk-img">
-                    <img src="./img/gallery3.png" alt="Фото в галерее" class="uk-img">
+            <div class="uk-container js-gallery-swiper">
+                <div class="uk-flex swiper-wrapper uk-flex-center uk-flex-middle uk-child-width-1-3@l uk-child-width-1-2@m uk-child-width-1-1@s gallery__photos">
+                    <div class="swiper-slide">
+                        <img src="./img/gallery1.png" alt="Фото в галерее" class="uk-img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/gallery2.png" alt="Фото в галерее" class="uk-img">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/gallery3.png" alt="Фото в галерее" class="uk-img">
+                    </div>
                 </div>
+                <div class="gallery__pagination"></div>
             </div>
         </section>
         <section class="agit">
@@ -561,6 +569,8 @@
             </div>
         </div>
     </div>
+
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
