--- a/foundation/index.html
+++ b/foundation/index.html
@@ -13,7 +13,7 @@
             <div class="shiseido-wrap">
                 <div class="shiseido-header__wrap">
                     <div class="shiseido-header__fake"></div>
-                    <img src="./img/shiseido-logo.png" alt="Logo" class="shiseido-header__logo">
+                    <img src="./img/shiseido-logo.jpg" alt="Logo" class="shiseido-header__logo">
                     <img src="./img/small-logo.png" alt="Logo" class="shiseido-header__small-logo">
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="shiseido-compare__card">
                         <span class="shiseido-compare__new">Новинка</span>
                         <img src="./img/compare-product.png" alt="Тональное средство с эффектом сияния и лифтинга Synchro Skin SPF 30, 230 Alder" class="shiseido-compare__product-img">
-                        <span class="shiseido-compare__name"><strong>Тональное средство<br> с эффектом сияния и лифтинга<br> Synchro Skin SPF 30,</strong><br>230 Alder</span>
+                        <span class="shiseido-compare__name"><strong>Тональное средство<br> с эффектом сияния и лифтинга<br> Synchro&nbsp;Skin&nbsp;SPF&nbsp;30,</strong><br>230 Alder</span>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                 <h2 class="shiseido-section-title shiseido-formula__title">Формула с прозрачными перламутровыми <br> частицами и микрокристаллами</h2>
                 <p class="shiseido-text shiseido-text_center shiseido-formula__text">Заметно разглаживает кожу, выравнивает ее поверхность и маскирует мелкие <br> и глубокие морщины, создавая эффект сияния, который выглядит безупречно независимо от освещения.</p>
             </div>
-            <video class="shiseido-formula__video" loop autoplay muted preload="metadata">
+            <video class="shiseido-formula__video" preload="metadata" muted playsinline autoplay loop>
                 <source src="./video/video.webm" type="video/webm">
                 <source src="./video/video.mp4" type="video/mp4">
             </video>
@@ -80,7 +80,7 @@
             <img src="./img/wetting-img.jpg" alt="Увлажнение 24 часа и комфорт на весь день" class="shiseido-wetting__img">
             <div class="shiseido-wetting__content">
                 <h2 class="shiseido-wetting__title">Увлажнение 24 часа и комфорт на весь день</h2>
-                <p class="shiseido-text shiseido-wetting__text">Средство содержит экстракт мадариновой цедры, богатой витамином С, а также экстракт буковых почек, помогающий поддерживать выработку коллагена.</p>
+                <p class="shiseido-text shiseido-wetting__text">Средство содержит экстракт мандариновой цедры, богатой витамином С, а также экстракт буковых почек, помогающий поддерживать выработку коллагена.</p>
             </div>
         </div>
         <div class="shiseido-collection">
