--- a/shiseido/lend_1.html
+++ b/shiseido/lend_1.html
@@ -13,7 +13,7 @@
             <div class="shiseido-wrap">
                 <div class="shiseido-header__wrap">
                     <div class="shiseido-header__fake"></div>
-                    <img src="./img/shiseido-logo.png" alt="Logo" class="shiseido-header__logo">
+                    <img src="./img/shiseido-logo.jpg" alt="Logo" class="shiseido-header__logo">
                     <img src="./img/small-logo.png" alt="Logo" class="shiseido-header__small-logo">
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 <div class="shiseido-hero__content">
                     <span class="shiseido-hero__new">НОВИНКА</span>
                     <h2 class="shiseido-hero__title">Vital Perfection</h2>
-                    <p class="shiseido-hero__text">Результат передовых научных достижений Японии. Ежедневный уход для заметно более упругой и подтянутой кожи.</p>
+                    <p class="shiseido-hero__text">Результат передовых научных достижений Японии. <br> Ежедневный уход для заметно более упругой и подтянутой кожи.</p>
                 </div>
                 <div class="shiseido-hero__item">
                     <span class="shiseido-hero__item-title">НОВИНКА</span>
@@ -46,7 +46,7 @@
             <div class="shiseido-wrap">
                 <h2 class="shiseido-section-title shiseido-video__title">Интенсивное средство против <br> глубоких морщин Vital Perfection</h2>
                 <p class="shiseido-text shiseido-text_center shiseido-video__text">Инновационное средство на основе ключевых технологий и ингредиентов Shiseido эффективно уменьшает видимость возрастных изменений, прицельно воздействуя на глубокие морщины, пигментные пятна и повышая упругость кожи. Кожа выглядит более молодой, ровной и сияющей.</p>
-                <video class="shiseido-video__video" loop autoplay muted preload="metadata">
+                <video class="shiseido-video__video" preload="metadata" muted playsinline autoplay loop>
                     <source src="./video/video_1.webm" type="video/webm">
                     <source src="./video/video_1.mp4" type="video/mp4">
                 </video>
@@ -108,9 +108,9 @@
             </div>
         </div>
         <div class="shiseido-together">
-            <h2 class="shiseido-section-title together__title">ИДЕАЛЬНЫЙ РИТУАЛ УХОДА ДЛЯ ЛИФТИНГА <br> И УКРЕПЛЕНИЯ КОЖИ</h2>
+            <h2 class="shiseido-section-title shiseido-together__title">ИДЕАЛЬНЫЙ РИТУАЛ УХОДА ДЛЯ ЛИФТИНГА <br> И УКРЕПЛЕНИЯ КОЖИ</h2>
             <div class="shiseido-together__banner">
-                сочетай вместе
+                сочетайте вместе
             </div>
             <div class="shiseido-together__catalog">
                 <div class="shiseido-together__item">
