--- a/shiseido/lend_2.html
+++ b/shiseido/lend_2.html
@@ -13,7 +13,7 @@
             <div class="shiseido-wrap">
                 <div class="shiseido-header__wrap">
                     <div class="shiseido-header__fake"></div>
-                    <img src="./img/shiseido-logo.png" alt="Logo" class="shiseido-header__logo">
+                    <img src="./img/shiseido-logo.jpg" alt="Logo" class="shiseido-header__logo">
                     <img src="./img/small-logo.png" alt="Logo" class="shiseido-header__small-logo">
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 <div class="shiseido-hero__content">
                     <span class="shiseido-hero__new">НОВИНКА</span>
                     <h2 class="shiseido-hero__title">Vital Perfection</h2>
-                    <p class="shiseido-hero__text">Результат передовых научных достижений Японии. Ежедневный уход для заметно более упругой и подтянутой кожи.</p>
+                    <p class="shiseido-hero__text">Результат передовых научных достижений Японии. <br> Ежедневный уход для заметно более упругой и подтянутой кожи.</p>
                 </div>
                 <div class="shiseido-hero__item">
                     <span class="shiseido-hero__item-title">НОВИНКА</span>
@@ -46,7 +46,7 @@
             <div class="shiseido-wrap">
                 <h2 class="shiseido-section-title shiseido-video__title">Моделирующая сыворотка <br> для лифтинга и сияния кожи Vital Perfection</h2>
                 <p class="shiseido-text shiseido-text_center shiseido-video__text">Моделирующая сыворотка для лица и шеи борется с потерей эластичности, морщинами и пигментными пятнами. В результате кожа выглядит более упругой и подтянутой, контуры становятся четче, лицо приобретает свежий и сияющий вид.</p>
-                <video class="shiseido-video__video" loop autoplay muted preload="metadata">
+                <video class="shiseido-video__video" preload="metadata" muted playsinline autoplay loop>
                     <source src="./video/video_2.webm" type="video/webm">
                     <source src="./video/video_2.mp4" type="video/mp4">
                 </video>
@@ -62,20 +62,19 @@
                     <div class="shiseido-formula__features">
                         <div class="shiseido-formula__item formula-item formula-item_center">
                             <h3 class="shiseido-formula-item__title">Экстракт водяного кресса</h3>
-                            <p class="shiseido-formula-item__text formula-item__shiseido-text_center">Способствует повышению естественной <br> выработки коллагена в коже.</p>
+                            <p class="shiseido-formula-item__text shiseido-formula-item__text_center">Способствует повышению естественной <br> выработки коллагена в коже.</p>
                         </div>
                         <div class="shiseido-formula__item formula-item formula-item_center">
                             <h3 class="shiseido-formula-item__title">Комплекс KURENAI-TruLift</h3>
-                            <p class="shiseido-formula-item__text formula-item__shiseido-text_center">Содержит экстракт сафлора, который придает <br> коже упругость и делает контуры лица более четкими.</p>
+                            <p class="shiseido-formula-item__text shiseido-formula-item__text_center">Содержит экстракт сафлора, который придает <br> коже упругость и делает контуры лица более четкими.</p>
                         </div>
                         <div class="shiseido-formula__item formula-item formula-item_center">
                             <h3 class="shiseido-formula-item__title">Технология ReNeura Technology++TM</h3>
-                            <p class="shiseido-formula-item__text formula-item__shiseido-text_center">Способствует достижению наибольшего результата.</p>
+                            <p class="shiseido-formula-item__text shiseido-formula-item__text_center">Способствует достижению наибольшего результата.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <small class="shiseido-wrap shiseido-video__small">*По результатам клинического испытания с участием 37 добровольцев.</small>
         </div>
         <div class="shiseido-shiseido">
             <div class="shiseido-wrap">
@@ -101,7 +100,7 @@
         <div class="shiseido-together">
             <h2 class="shiseido-section-title shiseido-together__title">ИДЕАЛЬНЫЙ РИТУАЛ УХОДА ДЛЯ ЛИФТИНГА <br> И УКРЕПЛЕНИЯ КОЖИ</h2>
             <div class="shiseido-together__banner">
-                сочетай вместе
+                сочетайте вместе
             </div>
             <div class="shiseido-together__catalog">
                 <div class="shiseido-together__item">
